Bug 389783 - DeInterlacing is enabled by default on HD channels and it is very slow
Summary: DeInterlacing is enabled by default on HD channels and it is very slow
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.13
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
: 387750 397532 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-02 00:09 UTC by Valentin Zagura
Modified: 2018-11-08 18:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Valentin Zagura 2018-02-02 00:09:44 UTC
I spent a few hours investigating the very low framerate of HD channels in Kaffeine until I've found out that deinterlacing was enabled by default.
I don't think the deinterlacing should be enabled by default, especially on HD channels.
Comment 1 Mauro Carvalho Chehab 2018-02-20 14:48:58 UTC
(In reply to Valentin Zagura from comment #0)
> I spent a few hours investigating the very low framerate of HD channels in
> Kaffeine until I've found out that deinterlacing was enabled by default.
> I don't think the deinterlacing should be enabled by default, especially on
> HD channels.

Not sure how to fix it. Kaffeine doesn't know if the hardware is fast enough for de-interlacing a certain video. Depending on the GPU, de-interlacing can happen inside it.

In other words, the entire de-interlacing and GPU performance is handled by libVLC.
Comment 2 Mauro Carvalho Chehab 2018-02-20 18:04:18 UTC
After thinking about that, I ended by adding this patch:

   https://commits.kde.org/kaffeine/73307da9a81bebbfae745e715c097104914963fc

It improves de-interlacing selection and sets default to not interlace:

Git commit 73307da9a81bebbfae745e715c097104914963fc by Mauro Carvalho Chehab.
Committed on 20/02/2018 at 17:58.
Pushed by mauroc into branch 'master'.

mediawidget: allow better control of deinterlacing mode

Instead of just on/off, allow setting the de-interlacing mode
to the types supported by libVLC.

Also changes default to not do deinterlacing, as most TV programs
nowadays are in progressive mode, and doing de-interlacing on
4K programs can be a very CPU intensive task.

Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>

M  +1    -1    doc/index.docbook
M  +2    -2    src/abstractmediawidget.h
M  +3    -6    src/backend-mplayer/mplayermediawidget.cpp
M  +2    -2    src/backend-mplayer/mplayermediawidget.h
M  +36   -5    src/backend-vlc/vlcmediawidget.cpp
M  +1    -1    src/backend-vlc/vlcmediawidget.h
M  +135  -28   src/mediawidget.cpp
M  +17   -2    src/mediawidget.h
Comment 3 Mauro Carvalho Chehab 2018-11-08 10:26:07 UTC
*** Bug 387750 has been marked as a duplicate of this bug. ***
Comment 4 Mauro Carvalho Chehab 2018-11-08 18:29:09 UTC
*** Bug 397532 has been marked as a duplicate of this bug. ***