mediawidget: allow better control of deinterlacing mode

Instead of just on/off, allow setting the de-interlacing mode
to the types supported by libVLC.

Also changes default to not do deinterlacing, as most TV programs
nowadays are in progressive mode, and doing de-interlacing on
4K programs can be a very CPU intensive task.

BUG: 389783

Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>